--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,27 +1,27 @@
-version: 0.2
+version: 0.1
 
 phases:
   install:
     commands:
       # install node 12
-      - echo ~~~~~~ Installing Node ~~~~~~
+      - echo Installing Node...
       - curl -sL https://deb.nodesource.com/setup_12.x | bash -
       - apt install -y nodejs
       # install yarn
-      - echo ~~~~~~ Installing Yarn ~~~~~~
+      - echo Installing Yarn...
       - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
       - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
       - apt install --no-install-recommends yarn
   pre_build:
     commands:
-      - cd /application/client
+      - cd application/client
       # install dependencies
-      - echo ~~~~~~ Installing Deps ~~~~~~
+      - echo Installing Deps...
       - yarn
   build:
     commands:
       # build
-      - echo ~~~~~~ Building ~~~~~~
+      - echo Building...
       - yarn build
 artifacts:
   files:
