--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,14 +12,14 @@ phases:
       - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
       - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
       - apt install --no-install-recommends yarn
-  pre_build:
-    commands:
-      # install dependencies
-      - cd application/client && yarn
+  # pre_build:
+  #   commands:
+  #     # install dependencies
+  #     - cd application/client && yarn
   build:
     commands:
       # build
-      - cd application/client && yarn build
+      - cd application/client && yarn && yarn build
 artifacts:
   files:
     - '**/*'
