--- a/application/client/buildspec.yml
+++ b/application/client/buildspec.yml
@@ -12,16 +12,16 @@ phases:
       - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add -
       - echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list
       - apt install --no-install-recommends yarn
-  # pre_build:
-  #   commands:
-  #     # install dependencies
-  #     - cd application/client && yarn
+  pre_build:
+    commands:
+      # install dependencies
+      - yarn
   build:
     commands:
       # build
-      - cd application/client && yarn && yarn build
+      - yarn build
 artifacts:
   files:
     - '**/*'
   discard-paths: no
-  base-directory: '/application/client/build'
+  base-directory: build
