--- a/application/server/package.json
+++ b/application/server/package.json
@@ -17,14 +17,19 @@
     "@babel/cli": "^7.10.1",
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
+    "aws-sdk": "^2.774.0",
     "chalk": "^4.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "morgan": "~1.9.1",
+    "mysql2": "^2.2.5",
     "nodemon": "^2.0.4",
     "npm-run-all": "^4.1.5",
-    "rimraf": "^3.0.2"
+    "regenerator-runtime": "^0.13.7",
+    "rimraf": "^3.0.2",
+    "sequelize": "^6.3.5"
   },
   "babel": {
     "presets": [
