--- a/application/server/package.json
+++ b/application/server/package.json
@@ -6,9 +6,9 @@
     "start": "yarn prod",
     "build": "npm-run-all clean transpile",
     "server": "node ./dist-server/bin/www",
-    "dev": "NODE_ENV=development npm-run-all build server",
+    "dev": "cross-env NODE_ENV=development npm-run-all build server",
     "watch:dev": "nodemon",
-    "prod": "NODE_ENV=production npm-run-all build server",
+    "prod": "cross-env NODE_ENV=production npm-run-all build server",
     "transpile": "babel ./src --out-dir dist-server",
     "clean": "rimraf dist-server",
     "test": "jest"
@@ -20,6 +20,7 @@
     "aws-sdk": "^2.774.0",
     "chalk": "^4.1.0",
     "cookie-parser": "~1.4.4",
+    "cross-env": "^7.0.2",
     "debug": "~2.6.9",
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
