--- a/application/server/package.json
+++ b/application/server/package.json
@@ -50,7 +50,12 @@
     ]
   },
   "devDependencies": {
-    "jest": "^26.0.1"
+    "eslint": "^7.12.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.0.1",
+    "prettier": "^2.1.2"
   },
   "jest": {
     "testEnvironment": "node"
