--- a/application/client/package.json
+++ b/application/client/package.json
@@ -30,9 +30,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -46,6 +43,7 @@
     ]
   },
   "devDependencies": {
+    "eslint": "6.6.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.15.0",
     "eslint-plugin-import": "^2.22.1",
