--- a/application/client/.eslintrc
+++ b/application/client/.eslintrc
@@ -15,6 +15,7 @@
         "trailingComma": "es5",
         "singleQuote": true,
         "printWidth": 100,
+        "endOfLine":"auto",
         "semi": false,
         "tabWidth": 2
       }
