--- a/application/client/package.json
+++ b/application/client/package.json
@@ -14,6 +14,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.11.2",
     "react-icons": "^3.11.0",
     "react-query": "^2.25.2",
     "react-redux": "^7.2.2",
@@ -22,7 +23,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
-    "universal-cookie": "^4.0.4"
+    "universal-cookie": "^4.0.4",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "react-scripts start",
