--- a/application/server/package.json
+++ b/application/server/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "dev": "concurrently \"tsc -w\" \"NODE_ENV=development nodemon dist/index.js\"",
+    "dev": "concurrently \"tsc -w\" \"cross-env NODE_ENV=development nodemon dist/index.js\"",
     "start": "node dist/index.js"
   },
   "dependencies": {
