--- a/application/server/tsconfig.json
+++ b/application/server/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "incremental": true,
     "target": "es6",
     "module": "commonjs",
     "lib": [
@@ -10,23 +11,23 @@
     ],
     "skipLibCheck": true,
     "declaration": true,
-    "sourceMap": true,
+    // "sourceMap": true,
     "outDir": "./dist",
     "moduleResolution": "node",
     "removeComments": true,
-    "noImplicitAny": true,
-    "strictNullChecks": true,
-    "strictFunctionTypes": true,
-    "noImplicitThis": false,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noImplicitReturns": false,
-    "noFallthroughCasesInSwitch": true,
+    // "noImplicitAny": true,
+    // "strictNullChecks": true,
+    // "strictFunctionTypes": true,
+    // "noImplicitThis": false,
+    // "noUnusedLocals": false,
+    // "noUnusedParameters": false,
+    // "noImplicitReturns": false,
+    // "noFallthroughCasesInSwitch": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "resolveJsonModule": true,
+    // "resolveJsonModule": true,
     "baseUrl": "."
   },
   "exclude": [
