--- a/application/client/package.json
+++ b/application/client/package.json
@@ -16,6 +16,8 @@
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.11.2",
     "react-icons": "^3.11.0",
+    "react-image-file-resizer": "^0.3.8",
+    "react-images-upload": "^1.2.8",
     "react-query": "^2.25.2",
     "react-redux": "^7.2.2",
     "react-router-dom": "5.1.0",
