--- a/application/server/package.json
+++ b/application/server/package.json
@@ -20,8 +20,12 @@
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.0",
+    "express-fileupload": "^1.2.0",
+    "express-formidable": "^1.2.0",
     "express-session": "^1.17.1",
     "ioredis": "^4.19.0",
+    "multer": "^1.4.2",
+    "multer-s3": "^2.9.0",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5",
     "ts-node": "^9.0.0",
@@ -52,6 +56,7 @@
     "@types/express": "^4.17.8",
     "@types/express-session": "^1.17.3",
     "@types/ioredis": "^4.17.6",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.3",
     "@types/redis": "^2.8.28",
     "@types/uuid": "^8.3.0",
