--- a/application/client/package.json
+++ b/application/client/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.3",
+    "history": "^5.0.0",
     "http-proxy-middleware": "^1.0.6",
     "md5": "^2.3.0",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.3.0",
     "react-hook-form": "^6.11.2",
     "react-icons": "^3.11.0",
     "react-image-file-resizer": "^0.3.8",
